--- a/lesson11/lesson11_1.ipynb
+++ b/lesson11/lesson11_1.ipynb
@@ -31,6 +31,8 @@
     }
    ],
    "source": [
+    "# https://www.perplexity.ai/search/b92996f2-3fae-420d-8946-bc113e815f93\n",
+    "\n",
     "import requests\n",
     "from requests import Response #Response 是class ; class 第一個字通常是大寫\n",
     "#是從 Python 的 requests 套件中導入 Response 類別的語法\n",
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0042cfff",
    "metadata": {},
    "outputs": [
