--- a/lesson12/lesson12_2.ipynb
+++ b/lesson12/lesson12_2.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "8b31a868",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://www.perplexity.ai/search/8c4c8903-ba37-4a73-935c-9afbf301d0e9"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "34b67a1e",
    "metadata": {},
