--- a/lesson12/lesson12_1.ipynb
+++ b/lesson12/lesson12_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ba4e2c0c",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,8 @@
     "# https://data.taipei/dataset/detail?id=c6bc8aed-557d-41d5-bfb1-8da24f78f2fb\n",
     "\n",
     "# https://tcgbusfs.blob.core.windows.net/dotapp/youbike/v2/youbike_immediate.json\n",
+    "\n",
+    "#https://www.perplexity.ai/search/c19fde11-4b27-4ccd-bca9-cd8a7c11e65d\n",
     "\n",
     "\n",
     "import requests\n",
