--- a/lesson13/lesson13_2.ipynb
+++ b/lesson13/lesson13_2.ipynb
@@ -56,7 +56,7 @@
     "# https://www.perplexity.ai/search/9871d0a8-7c4d-4f84-b02c-380c0c477c7d\n",
     "!pip install wget\n",
     "\n",
-    "#強制執行安裝用!pip用!pip"
+    "#強制執行安裝用!pip"
    ]
   },
   {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "69805a4d",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
     "import matplotlib as mpl\n",
     "\n",
     "fontManager.addfont(\"ChineseFont.ttf\")\n",
-    "mpl.rc('font',family='ChineseFont')\n",
+    "mpl.rc('font',family='ChineseFont') #設定中文字型\n",
     "\n",
     "figure, axes = plt.subplots()\n",
     "x = [0, 1, 2]\n",
