--- a/lesson15/lesson15_2.ipynb
+++ b/lesson15/lesson15_2.ipynb
@@ -10,26 +10,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "814cdabb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[63, 69, 84, 56, 68],\n",
-       "       [60, 83, 76, 65, 59],\n",
-       "       [62, 52, 75, 95, 96],\n",
-       "       [88, 77, 83, 59, 72],\n",
-       "       [73, 69, 99, 51, 51]], dtype=int32)"
+       "array([[73, 89, 58, 53, 54],\n",
+       "       [53, 88, 59, 76, 69],\n",
+       "       [76, 92, 59, 65, 54],\n",
+       "       [72, 94, 81, 93, 90],\n",
+       "       [63, 88, 89, 65, 70]], dtype=int32)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# numpy的索引和切割\n",
+    "# 1. 创建一个5x5的二维数组，元素为50到100之间的随机整数\n",
+    "# 2. 打印出这个数组\n",
     "import numpy as np\n",
     "scores = np.random.randint(50,101,size=(5,5))\n",
     "scores"
@@ -37,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "bfa0b9ad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[84, 56, 68],\n",
-       "       [76, 65, 59],\n",
-       "       [75, 95, 96]], dtype=int32)"
+       "array([[58, 53, 54],\n",
+       "       [59, 76, 69],\n",
+       "       [59, 65, 54]], dtype=int32)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,17 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "2334278e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[73, 69, 99, 51, 51]], dtype=int32)"
+       "array([[63, 88, 89, 65, 70]], dtype=int32)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,27 +86,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "c0ef1814",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[63, 69],\n",
-       "       [60, 83],\n",
-       "       [62, 52],\n",
-       "       [88, 77],\n",
-       "       [73, 69]], dtype=int32)"
+       "array([[73, 89],\n",
+       "       [53, 88],\n",
+       "       [76, 92],\n",
+       "       [72, 94],\n",
+       "       [63, 88]], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "scores[:,:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12bb489a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#numpy的統計工具\n",
+    "\n",
+    "scores = np.random.randint(50,101,size=(5,5))\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce476b42",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "scores[:,0] + scores[:,1] + scores[:,2] + scores[:,3] + scores[:,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a93f174",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#加總\n",
+    "np.sum(scores,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22810b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#平均\n",
+    "np.mean(scores, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a90c1ef0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#最大\n",
+    "np.max(scores,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed9408a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#最小\n",
+    "np.min(scores,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606d40fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#中間數\n",
+    "np.median(scores,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37882b0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#標準差\n",
+    "np.std(scores,axis=1)"
    ]
   }
  ],
