--- a/lesson15/lesson15_3.ipynb
+++ b/lesson15/lesson15_3.ipynb
@@ -2,73 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "70fb14bc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>apples</th>\n",
-       "      <th>oranges</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>第1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>第2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>第3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>第4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    apples  oranges\n",
-       "第1       3        0\n",
-       "第2       2        3\n",
-       "第3       0        7\n",
-       "第4       1        2"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -83,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d2bf502e",
    "metadata": {},
    "outputs": [
@@ -118,43 +55,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>學生1</th>\n",
-       "      <td>58</td>\n",
-       "      <td>94</td>\n",
-       "      <td>94</td>\n",
-       "      <td>85</td>\n",
-       "      <td>63</td>\n",
+       "      <td>78</td>\n",
+       "      <td>98</td>\n",
+       "      <td>56</td>\n",
+       "      <td>87</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>學生2</th>\n",
-       "      <td>57</td>\n",
-       "      <td>94</td>\n",
+       "      <td>61</td>\n",
+       "      <td>50</td>\n",
+       "      <td>98</td>\n",
+       "      <td>93</td>\n",
        "      <td>68</td>\n",
-       "      <td>90</td>\n",
-       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>學生3</th>\n",
-       "      <td>60</td>\n",
-       "      <td>91</td>\n",
-       "      <td>93</td>\n",
-       "      <td>90</td>\n",
-       "      <td>86</td>\n",
+       "      <td>52</td>\n",
+       "      <td>73</td>\n",
+       "      <td>74</td>\n",
+       "      <td>96</td>\n",
+       "      <td>73</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>學生4</th>\n",
-       "      <td>98</td>\n",
-       "      <td>67</td>\n",
+       "      <td>78</td>\n",
+       "      <td>59</td>\n",
        "      <td>89</td>\n",
-       "      <td>90</td>\n",
-       "      <td>67</td>\n",
+       "      <td>88</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>學生5</th>\n",
-       "      <td>66</td>\n",
-       "      <td>83</td>\n",
-       "      <td>74</td>\n",
-       "      <td>77</td>\n",
-       "      <td>62</td>\n",
+       "      <td>68</td>\n",
+       "      <td>60</td>\n",
+       "      <td>87</td>\n",
+       "      <td>54</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -162,14 +99,14 @@
       ],
       "text/plain": [
        "     國文  英文  數學  地理  歷史\n",
-       "學生1  58  94  94  85  63\n",
-       "學生2  57  94  68  90  81\n",
-       "學生3  60  91  93  90  86\n",
-       "學生4  98  67  89  90  67\n",
-       "學生5  66  83  74  77  62"
+       "學生1  78  98  56  87  96\n",
+       "學生2  61  50  98  93  68\n",
+       "學生3  52  73  74  96  73\n",
+       "學生4  78  59  89  88  66\n",
+       "學生5  68  60  87  54  71"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,6 +120,258 @@
     "            index=[\"學生1\",\"學生2\",\"學生3\",\"學生4\",\"學生5\"],\n",
     "            columns=[\"國文\",\"英文\",\"數學\",\"地理\",\"歷史\"])\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0c018d9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "學生1    78\n",
+       "學生2    61\n",
+       "學生3    52\n",
+       "學生4    78\n",
+       "學生5    68\n",
+       "Name: 國文, dtype: int32"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 依據欄位名稱選取資料\n",
+    "# 取得國文成績\n",
+    "df['國文']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f26d59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#可以使用numpy的統計function\n",
+    "sum = np.sum(df,axis=1)\n",
+    "mean = np.mean(df,axis=1)\n",
+    "df['總分'] = sum #計算總分\n",
+    "df['平均'] = mean #計算平均\n",
+    "df.values #顯示所有資料\n",
+    "df.index #顯示索引\n",
+    "df.columns #顯示欄位名稱    \n",
+    "# 取得國文成績大於80的學生\n",
+    "df[df['國文'] > 80]\n",
+    "df[df['國文'] > 80].index #取得符合條件的學生索引\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c37865e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "      <th>總分</th>\n",
+       "      <th>平均</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學生1</th>\n",
+       "      <td>78</td>\n",
+       "      <td>98</td>\n",
+       "      <td>56</td>\n",
+       "      <td>87</td>\n",
+       "      <td>96</td>\n",
+       "      <td>415</td>\n",
+       "      <td>83.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學生2</th>\n",
+       "      <td>61</td>\n",
+       "      <td>50</td>\n",
+       "      <td>98</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>370</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學生3</th>\n",
+       "      <td>52</td>\n",
+       "      <td>73</td>\n",
+       "      <td>74</td>\n",
+       "      <td>96</td>\n",
+       "      <td>73</td>\n",
+       "      <td>368</td>\n",
+       "      <td>73.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學生4</th>\n",
+       "      <td>78</td>\n",
+       "      <td>59</td>\n",
+       "      <td>89</td>\n",
+       "      <td>88</td>\n",
+       "      <td>66</td>\n",
+       "      <td>380</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學生5</th>\n",
+       "      <td>68</td>\n",
+       "      <td>60</td>\n",
+       "      <td>87</td>\n",
+       "      <td>54</td>\n",
+       "      <td>71</td>\n",
+       "      <td>340</td>\n",
+       "      <td>68.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  歷史   總分    平均\n",
+       "學生1  78  98  56  87  96  415  83.0\n",
+       "學生2  61  50  98  93  68  370  74.0\n",
+       "學生3  52  73  74  96  73  368  73.6\n",
+       "學生4  78  59  89  88  66  380  76.0\n",
+       "學生5  68  60  87  54  71  340  68.0"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#可以使用numpy的統計function\n",
+    "sum = np.sum(df,axis=1)\n",
+    "mean = np.mean(df,axis=1)\n",
+    "df['總分'] = sum #計算總分\n",
+    "df['平均'] = mean #計算平均\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31b3d207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>國文</th>\n",
+       "      <th>英文</th>\n",
+       "      <th>數學</th>\n",
+       "      <th>地理</th>\n",
+       "      <th>歷史</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>學生1</th>\n",
+       "      <td>78</td>\n",
+       "      <td>98</td>\n",
+       "      <td>56</td>\n",
+       "      <td>87</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>學生2</th>\n",
+       "      <td>61</td>\n",
+       "      <td>50</td>\n",
+       "      <td>98</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     國文  英文  數學  地理  歷史\n",
+       "學生1  78  98  56  87  96\n",
+       "學生2  61  50  98  93  68"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#依據 列選取\n",
+    "#.loc[]可以依據名稱選取\n",
+    "#.iloc[]可以依據index選取\n",
+    "\n",
+    "#依據列的選取\n",
+    "#.loc[] -> 依據名稱\n",
+    "#.iloc[] ->這是依據索引\n",
+    "\n",
+    "df.loc['學生1']\n",
+    "df.loc[['學生1','學生2']] #選取多個學生\n",
+    "df.loc['學生1':'學生3'] #選取範圍\n",
+    "df.loc['學生1':'學生3', '國文':'數學'] #選取範圍的欄位\n",
+    "\n",
+    "df.iloc[0] #類似numpy的選取\n",
+    "df.iloc[:2] \n",
+    "df.iloc[0,:5]\n",
+    "df.iloc[:2,:5]\n",
+    "\n"
    ]
   }
  ],
