--- a/lesson15/lesson15_6.ipynb
+++ b/lesson15/lesson15_6.ipynb
@@ -37,152 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "094b6322",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>國家</th>\n",
-       "      <th>日期</th>\n",
-       "      <th>總確診數</th>\n",
-       "      <th>新增確診數</th>\n",
-       "      <th>新增死亡數</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>163986</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2020-01-16</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163987</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2020-01-17</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163988</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2020-01-18</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163989</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2020-01-19</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>163990</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2020-01-20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164884</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2022-07-02</td>\n",
-       "      <td>3837856</td>\n",
-       "      <td>34807</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164885</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2022-07-03</td>\n",
-       "      <td>3870528</td>\n",
-       "      <td>32672</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164886</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2022-07-04</td>\n",
-       "      <td>3893643</td>\n",
-       "      <td>23115</td>\n",
-       "      <td>69</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164887</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2022-07-05</td>\n",
-       "      <td>3929627</td>\n",
-       "      <td>35984</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164888</th>\n",
-       "      <td>台灣</td>\n",
-       "      <td>2022-07-06</td>\n",
-       "      <td>3964188</td>\n",
-       "      <td>34561</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>903 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        國家          日期     總確診數  新增確診數  新增死亡數\n",
-       "163986  台灣  2020-01-16        0      0      0\n",
-       "163987  台灣  2020-01-17        0      0      0\n",
-       "163988  台灣  2020-01-18        0      0      0\n",
-       "163989  台灣  2020-01-19        0      0      0\n",
-       "163990  台灣  2020-01-20        0      0      0\n",
-       "...     ..         ...      ...    ...    ...\n",
-       "164884  台灣  2022-07-02  3837856  34807     96\n",
-       "164885  台灣  2022-07-03  3870528  32672     88\n",
-       "164886  台灣  2022-07-04  3893643  23115     69\n",
-       "164887  台灣  2022-07-05  3929627  35984    103\n",
-       "164888  台灣  2022-07-06  3964188  34561     95\n",
-       "\n",
-       "[903 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'all_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#使用query()實體方法\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m taiwan = \u001b[43mall_data\u001b[49m.query(\u001b[33m'\u001b[39m\u001b[33m國家==\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m台灣\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      4\u001b[39m taiwan\n",
+      "\u001b[31mNameError\u001b[39m: name 'all_data' is not defined"
+     ]
     }
    ],
    "source": [
