--- a/lesson16/lesson16_3.ipynb
+++ b/lesson16/lesson16_3.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f778249a",
    "metadata": {},
    "outputs": [],
@@ -25,15 +25,24 @@
     "type(score_pd.index)\n",
     "score_pd.columns.name = '科目'\n",
     "score_pd.index.name = '學號'\n",
-    "score_pd.to_excel('3年5班.xlsx',index=True)"
+    "score_pd.to_excel('3年5班.xlsx',index=True) #將資料寫入Excel檔案"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ded527d6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\monic\\OneDrive\\文件\\github\\2025_04_29_python_2_4-1\\lesson16\\__main__\n",
+      "C:\\Users\\monic\\OneDrive\\文件\\github\\2025_04_29_python_2_4-1\\lesson16\n",
+      "C:\\Users\\monic\\OneDrive\\文件\\github\\2025_04_29_python_2_4-1\\lesson16\\excel\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1538,11 +1547,19 @@
     "\n",
     "def rank(filepath:str):\n",
     "    df = pd.read_excel(filepath,index_col='學號')\n",
-    "    display(df)\n",
+    "    display(df) #顯示原始資料\n",
     "\n",
-    "script_path = os.path.realpath(__name__)\n",
-    "script_root = os.path.dirname(script_path)\n",
-    "excel_folder = os.path.join(script_root,\"excel\")\n",
+    "script_path = os.path.realpath(__name__) #  獲取腳本的完整路徑\n",
+    "print(script_path) #顯示腳本的完整路徑\n",
+    "script_root = os.path.dirname(script_path) # 獲取腳本所在的目錄\n",
+    "print(script_root) #顯示腳本所在的目錄\n",
+    "excel_folder = os.path.join(script_root,\"excel\") # 獲取excel資料夾的路徑\n",
+    "print(excel_folder) #顯示excel資料夾的路徑\n",
+    "if not os.path.exists(excel_folder):\n",
+    "    os.makedirs(excel_folder)  # 如果資料夾不存在，則創建它\n",
+    "# 將生成的DataFrame寫入Excel檔案\n",
+    "score_pd.to_excel(os.path.join(excel_folder, '3年5班.xlsx'), index=True)\n",
+    "\n",
     "for excel_name in os.listdir(excel_folder):\n",
     "    excel_path = os.path.join(excel_folder,excel_name)\n",
     "    rank(excel_path)"
@@ -1550,20 +1567,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "39d264ff",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3年5班.xlsx\n",
-      "3年6班.xlsx\n",
-      "3年7班.xlsx\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "script_path = os.path.realpath(__name__)\n",
